--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ html { font-family: 'Inter', sans-serif; }
     font-family: 'inter';
 }
 .navbar-brand:hover{
-    opacity: 50%
+    opacity: 60%;
 }
 .nav-item .nav-link{
     margin-left: 1.5em;
